# eval_framework

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  codebase.md  pyproject.toml  run_app.py
example_ragas_integration/: README.md
example_ragas_integration/scanario2_compat_layer/: run_context_recall_eval.py
example_ragas_integration/scenario2_compat_layer/: run_context_recall_eval.py
skills/eval_data_analysis/: SKILL.md
skills/eval_framework_mcp/: SKILL.md
skills/governance_audit/: SKILL.md
skills_tests/: 1_cases___seven_agents_skill_fixtures.md  1_prompt_to_create_the_cases.md  2_planning.md  2_planning___README.md  2_planning___RUNBOOK.md  3_trace___l1_seed_status.md  3_trace___l2_seed_status.md
specs/: functional_spec.md  functional_spec_addendum.md  problems_after_first_software_generation.md  problems_after_second_software_generation.md  python_objects.md
tests/: conftest.py  test_agent_runner.py  test_agentic_sim.py  test_ast_enrichment.py  test_benchmark.py  test_blueprints.py  test_campaigns.py  test_case_generation.py  test_cases_state.py  test_cases_versioning.py  test_code_explorer_runner.py  test_comparison.py  test_events.py  test_faults.py  test_governance.py  test_input_payload.py  test_jobs.py  test_jobs_routes.py  test_mcp.py  test_message_parts.py  test_otel_dump.py  test_registries.py  test_rubric_judge.py  test_run_coro_sync.py  test_runs_service.py  test_scanner.py  test_scoring.py  test_snapshot_label.py  test_storage.py  test_subprocess_util.py  test_trace_events.py  test_web.py  test_worktree.py
(+247 files in other folders)
