[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-workbench"
version = "0.1.0"
description = "Agent Evaluation and Provenance Workbench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "pydantic>=2.0",
    "kuzu",
    "google-adk",
    "litellm",
    "mcp>=1.27,<2",
    "scikit-learn",
    "numpy",
    "scipy",
    "sentence-transformers",
    "opentelemetry-proto",
    "libcst",
]

[project.scripts]
eval-workbench-mcp = "src.eval_workbench.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]
