[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-workbench"
version = "0.1.0"
description = "Agent Evaluation and Provenance Workbench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "pydantic>=2.0",
    "kuzu",
    "google-adk",
    "mcp>=1.27,<2",
    "scikit-learn",
    "numpy",
    "opentelemetry-proto",
    "libcst",
    "python-dotenv",
]

[project.scripts]
eval-workbench-mcp = "src.eval_workbench.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]
ragas = [
    "sentence-transformers",
    "litellm",
]

[tool.hatch.build.targets.wheel]
only-include = ["src/__init__.py", "src/eval_workbench"]
